# ComfyUI-Veo2-Experimental

./: README.md  pyproject.toml  requirements.txt  veo_api.py  veo_nodes.py
web/css/: veo_styles.css
web/js/: veo_nodes.js
workflow/: Veo2_ComfyUI.json
